--- a/server/.envExample
+++ b/server/.envExample
@@ -7,3 +7,6 @@ NODE_ENV = development
 DATABASE= mongodb://localhost:27017/<DBName>
 
 TOKEN_KEY=<yourToken>
+
+# Frontend URL
+URL = http://localhost:3000
